--- a/monitoring/values.yaml
+++ b/monitoring/values.yaml
@@ -1,25 +1,37 @@
-prometheus:
-  prometheusSpec:
-    retention: 7d
-    resources:
-      requests:
-        cpu: 200m
-        memory: 512Mi
-      limits:
-        cpu: 500m
-        memory: 1Gi
+alertmanager:
+  enabled: false
 
 grafana:
+  enabled: true
   adminPassword: admin123
   service:
     type: LoadBalancer
   resources:
     requests:
-      cpu: 100m
-      memory: 256Mi
+      cpu: 50m
+      memory: 128Mi
     limits:
-      cpu: 300m
-      memory: 512Mi
+      cpu: 200m
+      memory: 256Mi
 
-alertmanager:
+prometheus:
+  enabled: true
+  prometheusSpec:
+    replicas: 1
+    retention: 2d
+    resources:
+      requests:
+        cpu: 100m
+        memory: 256Mi
+      limits:
+        cpu: 300m
+        memory: 512Mi
+
+kubeStateMetrics:
   enabled: false
+
+nodeExporter:
+  enabled: false
+
+defaultRules:
+  create: false
