--- a/monitoring/values.yaml
+++ b/monitoring/values.yaml
@@ -1,19 +1,22 @@
+# ---- HARD DISABLE problematic components ----
+admissionWebhooks:
+  enabled: false
+  patch:
+    enabled: false
+
 alertmanager:
   enabled: false
 
-grafana:
-  enabled: true
-  adminPassword: admin123
-  service:
-    type: LoadBalancer
-  resources:
-    requests:
-      cpu: 50m
-      memory: 128Mi
-    limits:
-      cpu: 200m
-      memory: 256Mi
+kubeStateMetrics:
+  enabled: false
 
+nodeExporter:
+  enabled: false
+
+defaultRules:
+  create: false
+
+# ---- Prometheus (very small) ----
 prometheus:
   enabled: true
   prometheusSpec:
@@ -27,11 +30,16 @@ prometheus:
         cpu: 300m
         memory: 512Mi
 
-kubeStateMetrics:
-  enabled: false
-
-nodeExporter:
-  enabled: false
-
-defaultRules:
-  create: false
+# ---- Grafana ----
+grafana:
+  enabled: true
+  adminPassword: admin123
+  service:
+    type: LoadBalancer
+  resources:
+    requests:
+      cpu: 50m
+      memory: 128Mi
+    limits:
+      cpu: 200m
+      memory: 256Mi
